# PP

./: README.md
lab1/: CPPresult.txt  PYresult.txt  lab1.cpp  mat1.txt  mat2.txt  verify.py
lab2/: README.md  info.txt  lab1.cpp  verify.py
lab3/: info.txt  lab1.cpp  mat1.txt  mat2.txt  verify.py
lab4/: CPPresult.txt  PYresult.txt  README.md  info.txt  lab1.cu  lab1.py  mat1.txt  mat2.txt  verify.py
lab5/: CMakeLists.txt  README.md  info.txt  job.out  lab1.cpp  run.pbs  summary.txt  verify.py
